<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup

        android:id="@+id/RadioGroupUserCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_eleve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Eleve"
            android:checked="true"/>
        <RadioButton android:id="@+id/radio_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Parent"/>
    </RadioGroup>


    <EditText
        android:id="@+id/editTextUserFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RadioGroupUserCreate"
        android:layout_alignParentStart="true"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:singleLine="true">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextUserLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUserFirstname"
        android:layout_alignParentStart="true"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:singleLine="true">

    </EditText>


    <EditText
        android:id="@+id/editTextUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUserLastname"
        android:layout_alignParentStart="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editTextUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUserEmail"
        android:layout_alignParentStart="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/editTextUserPassword">

        <TextView
            android:id="@+id/TextUserCreateSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/annee_scolaire"
            android:textColor="#777777"
            android:textSize="12sp" />
        <Spinner
            android:id="@+id/spinnerUserCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/TextUserCreateSpinner"
            />
    </RelativeLayout>


</RelativeLayout>